fixed: overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -214,6 +214,8 @@ p {
     z-index: 100;
   }
 
+  #leadership,
+  #about,
   #capabilities {
     overflow-x: hidden;
   }
